--- a/odin-recipes/style.css
+++ b/odin-recipes/style.css
@@ -4,6 +4,35 @@
   box-sizing: border-box;
 }
 
+body {
+  background: white;
+  background-image: linear-gradient(
+      90deg,
+      rgba(200, 0, 0, 0.5) 50%,
+      transparent 0
+    ),
+    linear-gradient(rgba(200, 0, 0, 0.5) 50%, transparent 0);
+  background-size: 50px 50px;
+}
+
 img {
   width: 25%;
+}
+
+.odinHeading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 30px;
+  text-shadow: 2px 2px #ff0000;
+  width: 500px;
+  height: 250px;
+  border-color: white;
+  border-style: dotted;
+  border-width: 40px;
 }
