--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -23,9 +23,8 @@ h1 {
 
 p {
   font-size: 18px;
-  color: #e5e7eb;
+  color: #c9cbce;
   font-weight: 400;
-  margin: 20px 40px 20px 0px;
 }
 
 /* ------------- HEADER ------------- */
@@ -55,7 +54,6 @@ nav {
 ul {
   display: flex;
   font-size: 18px;
-  color: #e5e7eb;
   list-style-type: none;
 }
 
@@ -76,6 +74,10 @@ li:last-child {
 
 .section-one {
   width: 500px;
+}
+
+.sect-one-text {
+  margin: 20px 40px 20px 0px;
 }
 
 .button {
@@ -100,3 +102,40 @@ li:last-child {
   align-items: center;
 }
 /* ------------- HEADER ------------- */
+
+/* ------------- MAIN ------------- */
+main {
+  background-color: white;
+  height: 450px;
+}
+
+h2 {
+  font-size: 36px;
+  font-weight: 700;
+  color: #1f2937;
+  text-align: center;
+  padding: 40px 0px;
+}
+
+.border-box-line {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 0px 200px 0px;
+}
+
+.border-box {
+  width: 170px;
+  height: 170px;
+  border: 5px solid #3882f6;
+  border-radius: 20px;
+}
+
+.box-text {
+  color: #abaeb1;
+  width: 170px;
+  text-align: center;
+  padding-top: 10px;
+}
+
+/* ------------- MAIN ------------- */
